--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,8 @@ services:
     ports:
       #IMPORTANT: CHANGE <your port here> to the port you want removing the <> around it. DO NOT UNDER ANY CIRCUMSTANCES CHANGE :1234!
       - <your port here>:1234
+# network config if youi want a network config feel free to use the one below and change the name to your liking. YOU MUST RUN docker network create <your name> BEFORE RUNNING THE CONTAINER
+#networks:
+#  default:
+#    external:
+#      name: default
